CH: Fixing verticle alignment of elements

--- a/src/components/Focus.css
+++ b/src/components/Focus.css
@@ -11,8 +11,10 @@
   background-color: transparent;
   border: none;
   position: absolute;
-  left: -42%;
+  left: 15px;
   top: 15px;
+  width: 50px;
+  height: 50px;
 }
 
 .play-button {
@@ -23,6 +25,11 @@
 .title {
   position: absolute;
   top: 25px;
+  margin-bottom: 0px;
+}
+
+.timer-text {
+  margin-bottom: 0px;
 }
 
 .button-container {
